2015-09-05  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.2-svn-36  Improved Attachment upload in the HADDOCK template

       * Fixed the AttachementServlet so you can now select multiple files
         before pressing the upload button.  You can also use 
		 drap & drop if your browser supports it.
 
        * [JSPWIKI-903] Fixed a page redirect issue when deleting an 
         attachment from the Attachment info page.  

       * Fixed the zebra-stripes of the FIND AJAXSearch.jsp
       
       * Few small improvements on the plain editor suggestion dialogs.
       

2015-08-28  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.2-svn-35 
       
       * [JSPWIKI-912] Haddock Template: fixing the position of headers
         below the fixed navigation bar, when returning from a section edit.


2015-08-23  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.2-svn-34  WYSIWYG improvements
       
       * Added the wysiwyg editor to the wro4j build process 
       
       * Improved the stability of the  WysiwygEditingRenderer
       
       

2015-08-22  Harry Metske (metskem@apache.org)

       * 2.10.2-svn-33  Fixed JSPWIKI-910 support configuring jspwiki with envvars
                        having dots replaced with underscores in the varnames

2015-08-16  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.2-svn-32  Haddock Template updates & WYSIWYG editing
       
       Haddock Template:

       * [JSPWIKI-902] Printing improvements for the HADDOCK template,
         hiding sidebar, userbox, wrapping long page-names, and a few other tweaks.

       * The Page Footer now sticks to the bottom of the screen, even for short pages

       * Fixed an issue with the persistence of the status of collapsible lists

       * Added fixes for IE compatibility for the bootstrap css framework.

       * [JSPWIKI-892] Haddock editor should put the cursor at the top of the textarea,