@@ -1,3 +1,12 @@
+2015-09-06  Dirk Frederickx (brushed AT apache DOT org)
+
+       * 2.10.2-svn-37  Few Attachment tweaks in the HADDOCK template
+
+       * Fixed display issue with long attachment names
+       * Show loading animation after pressing the upload button
+       * Improved display of file sizes with support for KB,MB,GB,TB.
+
+
 2015-09-05  Dirk Frederickx (brushed AT apache DOT org)
 
        * 2.10.2-svn-36  Improved Attachment upload in the HADDOCK template
